--- a/src/app/admin/purchase/purchase.component.html
+++ b/src/app/admin/purchase/purchase.component.html
@@ -53,9 +53,9 @@
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>R/O</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.purch_ro}}</td>
           </ng-container>
-          <ng-container matColumnDef="purch_party_bill_no">
+          <ng-container matColumnDef="purch_bill_no">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Bill Number</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.purch_party_bill_no}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.purch_bill_no}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Action">
