--- a/src/app/admin/customer/customer.component.css
+++ b/src/app/admin/customer/customer.component.css
@@ -21,7 +21,8 @@
 
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+    font-style: italic;
+    font-size: 16px;}
 
 .count_search {
     height: 40px;
@@ -32,7 +33,9 @@
     box-sizing: border-box;
     color: #0d5e58;
 }
-
+.count_search .notice_text{
+    font-size: 16px;
+}
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
@@ -51,7 +54,7 @@ mat-icon {
 }
 
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -60,8 +63,8 @@ mat-icon {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
-}
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 
 tr:nth-child(even) {
     background-color: whitesmoke;
@@ -77,13 +80,11 @@ tr:hover {
     color: aliceblue;
     cursor: pointer;
 }
-
+.mat-row:hover > .mat-cell {
+    color:  white
+  }
 ng-container {
     text-align: center;
-}
-
-.cotainer {
-    margin-top: 5px;
 }
 
 .mat-form-field {
@@ -91,6 +92,39 @@ ng-container {
     width: 100%;
 }
 
-.data:hover {
-    color: white;
+/* //////////////////////////table media q//////////////////////////// */
+
+@media (max-width:460px) {
+    .notice_text {
+        font-size: 13px;
+    }
+    .count_search .notice_text{
+        font-size: 13px;
+    }
+    table th {
+        font-size: 13px;
+    }
+
+    table td {
+        font-size: 13px;
+    }
+
+    th.mat-header-cell:first-of-type {
+        padding-left: 13px;
+    }
+
+    th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+        width: 0%;
+    }
+
+    td.mat-cell:first-of-type {
+        padding-left: 20px;
+    }
+
+    td.mat-cell:last-of-type {
+        padding-right: 0px;
+        padding-left: 10px;
+    }
+    
 }
