--- a/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.css
+++ b/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.css
@@ -27,8 +27,8 @@ mat-toolbar{
     background: none;
     position: relative;
     top:-25px;
-    color:whitesmoke;
-    background-color:#14595c; ;
+    color:#14595c;
+   
 }
 
 
